Bug 1346711 - Backout changeset 36839839cfa7 (bug 1334443). a=jcristau

proxy_GetStringPref also strips whitespace, thus it breaks parsing a space separated list

MozReview-Commit-ID: F9SoMkbI28z